--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "jwt": "^0.2.0",
     "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
